:white_check_mark:Accordion to be completed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <!-- <section class="s1">
+    <section class="s1">
         <div class="main-container">
             <div class="greeting-wrapper">
                 <h1>Hello! I'm Pahan Chathuranga.</h1>
@@ -55,7 +55,7 @@
                         <div class="corner" id="corner-tr"></div>
 
                         <h2>Who am I?</h2>
-                        <p>An undergraduate who is following a BEng.Software Engineering at Informatics Institute of Technology is affiliated with the University of Westminster, United Kingdom.
+                        <p>An undergraduate who is following a BEng.Software Engineering at Informatics Institute of Technology which is affiliated with the University of Westminster, United Kingdom.
                         </p>
                         <div class="corner" id="corner-bl"></div>
                         <div class="corner" id="corner-br"></div>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    </section> -->
+    </section>
 
     <section class="s2">
         <div class="main-container">
@@ -143,6 +143,30 @@
                 </div>    
 
             </div> 
+        </div>
+    </section>
+
+    <section class="s1">
+        <div class="main-container">          
+        </div>
+    </section>
+    <!-- dropdown for the wordpress sites -->
+    <section class="s1">
+        <div class="main-container">    
+            <div class="accordion">
+                <div>
+                  <input type="checkbox" name="example_accordion" id="section1" class="accordion__input">
+                  <label for="section1" class="accordion__label">I have implemented some websites using Wordpress for some clients.(Click to see!)</label>
+                  <div class="accordion__content">
+                    <p>I have implemented some websites using Wordpress for some clients.</p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sit reiciendis, ipsam quaerat,
+                      aperiam perspiciatis ad ullam architecto impedit natus illo nostrum molestias voluptas earum a
+                      voluptatibus fugiat fuga facere!
+                    </p>
+                  </div>
+                </div>
+              </div>        
         </div>
     </section>
 
