--- a/index.html
+++ b/index.html
@@ -154,12 +154,46 @@
     <!-- dropdown for the wordpress sites -->
     <section class="s1">
         <div class="main-container">    
-            <div class="accordion">
-                <div>
-                  <input type="checkbox" name="example_accordion" id="section1" class="accordion__input">
-                  <label for="section1" class="accordion__label">I have implemented some websites using Wordpress for some clients.(Click to see!)</label>
-                  <div class="accordion__content">
-                    <div>
+            <div class="accordion-wrapper">
+                <button class="accordion">I have implemented some websites using wordpress! (Click to see)</button>
+                        <div class="accordion-content">
+                            <div class="box-wrapper">
+                                <div>
+                                    <div class="website">
+                                        <img src="images/PAHAN.jpg" alt="wawemedia" class="thumbnail">
+                                        <div class="web-preview">
+                                            <h6 class="web-title">WaweMedia</h6>
+                                            <p class="web-intro">Web  for a marketing agency based in Kirulapone.</p>
+                                            <a href="http://wawemedia.com/" target="_blank" id="visit-link">Visit site</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="website">
+                                        <img src="images/PAHAN.jpg" alt="wawemedia" class="thumbnail">
+                                        <div class="web-preview">
+                                            <h6 class="web-title" >EasyVisa</h6>
+                                            <p class="web-intro">Web for a visa consultancy company in Bambalapitiya.</p>
+                                            <a href="http://easyvisasl.com/" target="_blank" id="visit-link">Visit site</a>
+    
+                                        </div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="website">
+                                        <img src="images/PAHAN.jpg" alt="wawemedia" class="thumbnail">
+                                        <div class="web-preview">
+                                            <h6 class="web-title" >EuphoricVibes</h6>
+                                            <p class="web-intro">A private blog-site implementation for a client.</p>
+                                            <a href="https://euphoricvibes.com/" target="_blank" id="visit-link">Visit site</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>                        
+
+                        </div>
+
+                    <!-- <div>
                         <div class="box-wrapper">
                             <div>
                                 <div class="website">
@@ -195,9 +229,9 @@
                         </div>
                     </div>
 
-                  </div>
+                  </div> -->
                 </div>
-              </div>        
+                    
         </div>
     </section>
 
