--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link id="theme-style" rel="stylesheet" type="text/css" href="" >
 </head>
 <body>
-    <!-- <section class="s1">
+    <section class="s1">
         <div class="main-container">
             <div class="greeting-wrapper">
                 <h1>Hello! I'm Pahan Chathuranga.</h1>
@@ -232,7 +232,7 @@
             </div>
         </div>
 </div>
-    </section> -->
+    </section>
 
     <section class="s2">
         <div class="main-container">
