:lipstick:Minor UI changes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section class="s1">
         <div class="main-container">    
             <div class="accordion-wrapper">
-                <button class="accordion">I have implemented some websites using wordpress! (Click to see)</button>
+                <button class="accordion">I have implemented some websites using wordpress! (Click here!)</button>
                         <div class="accordion-content">
                             <h2 style="text-align: center;">WordPress Projects</h2>
 
@@ -209,7 +209,7 @@
                                         <img src="images/euphoricvibes.JPG" alt="euphoricvibes" class="thumbnail">
                                         <div class="web-preview">
                                             <h6 class="web-title" >EuphoricVibes</h6>
-                                            <p class="web-intro">A private blog-site implementation for a client.</p>
+                                            <p class="web-intro">A private blog-site implementation.</p>
                                             <a href="https://euphoricvibes.com/" target="_blank" id="visit-link">Visit site</a>
                                         </div>
                                     </div>
@@ -272,7 +272,7 @@
             <div class="contact-wrapper">
 
                 <div class="social-wrapper">
-                    <h3 style="text-align: left;">Find me around the web 🌎</h3>
+                    <h3 style="text-align: center;">Find me around the web 🌎</h3>
 
 
                     <div class="social-box-wrapper"> 
@@ -337,7 +337,7 @@
                 </div> 
 
                 <div class="form-wrapper">
-                    <h3 style="text-align:left;">Get In Touch</h3>
+                    <h3 style="text-align:center;">Get In Touch</h3>
                     <div class="contact-form" id="contact">
                         
                       <form method="post" class="contact-form"  action="form-to-email.php">
