:heavy_check_mark:Resume added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                         
                     </a> 
                     <div class="btn-wrapper">
-                        <button class="download" >Download My Resume</button>
+                        <a href="https://drive.google.com/file/d/1UiMlTAiqr43kgmx8zlYJZT-lMaj_BkIQ/view?usp=sharing" target="_blank">
+                            <button class="download">View My Resume</button>
+                        </a>
                     </div>
                 </div>  
                 </div>
